# tests_bin

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: macos-latest.yml  macos-performance.yml  ubuntu-latest.yml  ubuntu-performance.yml  windows-latest.yml  windows-performance.yml
ext/vscode/rust-tests-bin/: CHANGELOG.md  README.md  package-lock.json  package.json
ext/vscode/rust-tests-bin/src/: activation.ts  binCodeLens.ts  extension.ts  fileSystem.ts  parser.ts
src/: config.rs  errors.rs  lib.rs
tests/: tests.rs
tests/integration/: 001.rs  002.rs  003.rs  004.rs  005.rs  007.rs  008.rs  009.rs  010.rs  011.rs  012.rs  mod.rs
tests/integration/unit/sf1/sf2/: foo.rs
tests/performance/: legacy.rs  mod.rs  tests_bin.rs
tests/performance/unit/totoro/: neighbor.rs
