[package]
name = "tests_bin"
version = "1.0.0"
edition = "2021"
authors = ["NickelAnge.Studio <rust@nickelange.studio>"]
description = "Simple solution to organize unit tests. VSCode extension included!"
keywords = ["unit", "tests", "tests_bin", "organize", "simple"]
categories = ["development-tools", "development-tools::testing" ]
repository = "https://github.com/NickelAngeStudio/tests_bin"
homepage = "https://github.com/NickelAngeStudio/tests_bin/wiki"
license = "MIT"
readme = "README.md"

# List of excluded files
exclude = [
    "target/*",
    "img/*",
    "ext/*",
    "tests/*",
    ".git/*",
    ".vscode/*",
    ".cargo/*",
    ".github/*",
    ".gitignore",
    "tests_bin.png",
    "tests_bin_ext.png"

]

[lib]
proc-macro = true
